--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,15 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.6.1
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.5
-  hooks_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1   
+  flutter_riverpod: ^2.6.1
   get: ^4.6.6
   get_storage: ^2.1.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -21,14 +20,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   riverpod_generator: ^2.6.4
   build_runner: ^2.4.14
-  custom_lint: ^0.7.1
-  riverpod_lint: ^2.6.4
-  
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/images/
-    - assets/fonts/
-    - assets/icons/
-    - assets/json/
